# blinky-badge-light

./: .gitignore  LICENSE  README.md
3d models/: blinky_badge_light_case.f3d
blinky-badge-light/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
blinky-badge-light/main/: CMakeLists.txt  battery_level_pattern.c  battery_level_pattern.h  battery_monitor.c  battery_monitor.h  ble.c  ble.h  comms_portal.c  comms_portal.h  dns_portal.c  dns_portal.h  firework_notification_pattern.c  firework_notification_pattern.h  genes.c  genes.h  led_control.c  led_control.h  led_utils.c  led_utils.h  main.c  microphone.c  microphone.h  now.c  now.h  pins.h  portal.c  portal.h  power_button.c  power_button.h  storage.c  storage.h  testing_routine.c  testing_routine.h  touch_input.c  touch_input.h  vu_meter.c  vu_meter.h  wifi_portal.c  wifi_portal.h
hardware/KiCad/blinky_badge_light/: #auto_saved_files#  blinky_badge_light.kicad_pcb  blinky_badge_light.kicad_prl  blinky_badge_light.kicad_pro  blinky_badge_light.kicad_sch  blinky_badge_symbols.bak  blinky_badge_symbols.kicad_sym  charging_module.kicad_sch  components.kicad_sch  fabrication-toolkit-options.json  fp-info-cache  fp-lib-table  leds.kicad_sch  sym-lib-table
hardware/KiCad/blinky_badge_light/labels.pretty/: Untitled.kicad_mod  battery.kicad_mod  brightness_level.kicad_mod  check.kicad_mod  hold_off.kicad_mod  minus.kicad_mod  mystery.kicad_mod  next_pattern.kicad_mod  off.kicad_mod  on.kicad_mod  plus.kicad_mod  questionmark.kicad_mod  replace_pattern.kicad_mod  replace_pattern_2.kicad_mod
latest bin/: burn.sh
(+4 files in other folders)
