idf_component_register(
    SRCS
        "main.c"
        "led_control.c"
        "touch_input.c"
        "storage.c"
        "genes.c"
        "led_utils.c"
        "battery_monitor.c"
        "battery_level_pattern.c"
        "microphone.c"
        "vu_meter.c"
        "testing_routine.c"
        "firework_notification_pattern.c"
        "now.c"
    INCLUDE_DIRS
        "."
)